W-18716253: Repeatable streams wait to fill the whole buffer instead of returning immediately available data (#14459)(#14467)